--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,5 @@
-app.grails.version=2.4.2
+#Grails Metadata file
+#Sun Nov 02 15:40:25 PST 2014
+app.grails.version=2.3.9
 app.name=grails-spring-security-core
+app.servlet.version=2.5
